  * Removed all Debugging-Output. Please use xdebug or f:debug or Admin-Panel or...
  * Change pi_getLL to LocalizationUtility to use new path of language files
  * Change language files to XLF
  * Divide Languagefile to locallang, locallang_db and FlexForm
  * Change IMAGE() call to cObjGetSingle()
  * Remove or change many deprecated code
  * Create date with f:format.date in template directly

2017-06-02  Kurt Kunig <kurt.kunig@kupix.de>
  * in class.tx_kkdownloader_addFieldsToFlexForm.php ergänzt: Kategorien alphabetisch sortiert!
   Danke für den Hinweis an Michael Lausberg, FH Aachen
  * Liste der Kategorien ebenfalls sortiert nach Kategorienamen anstatt Erstelldatum

2016-01-25  Kurt Kunig <kurt.kunig@kupix.de>
   * Ready for TYPO3 Version 6 up to 7.9.99

2015-07-14 Kurt Kunig <kurt.kunig@kupix.de>
  * make the ext. running under TYPO3 until V6.2.99
  * modified template-path handling in the flexform

2012-07-12 Kurt Kunig <kurt.kunig@kupix.de>
  * make the ext. running under TYPO3 V4.7 (replaced deprecated old functions: ->sql(... to ->sql_query(...)
  * possibility to crop the download-file description

2011-12-22 Kurt Kunig <kurt.kunig@kupix.de>
  * make the ext. running under TYPO3 V4.6 (replaced deprecated old functions)

2011-09-13 Kurt Kunig <kurt.kunig@kupix.de>
  * correction of the mimetype function (wrong allocation)

2011-05-24 Kurt Kunig <kurt.kunig@kupix.de>
  * there was no correct where function in categories if a cat-set is set (e.g. "2,1")
  * Thanks to Michael Hilgers <mhil@mhil.at> for the new statement: [$where2 = " AND (find_in_set('$cat',tx_kkdownloader_images.cat )) >0";] in line 253

2011-05-19 Kurt Kunig <kurt.kunig@kupix.de>
  * there was no correct select in categories if more than 9 cats exist
  * Thanks to Michael Hilgers <mhil@mhil.at> for this correction: [$where2 = " AND ($cat IN (tx_kkdownloader_images.cat))";] in line 251

2011-05-03 Kurt Kunig <kurt.kunig@kupix.de>