@@ -15,7 +15,7 @@ return [
         'enablecolumns' => [
             'disabled' => 'hidden',
         ],
-        'iconfile' => 'EXT:kk_downloader/icon_tx_kkdownloader_images.gif',
+        'iconfile' => 'EXT:kk_downloader/Resources/Public/Icons/tx_kkdownloader_images.gif',
     ],
     'interface' => [
         'showRecordFieldList' => 'sys_language_uid,l18n_parent,l18n_diffsource,hidden,name,image,description,longdescription,clicks,cat'
