@@ -37,13 +37,14 @@ plugin.tx_kkdownloader_pi1 {
   filesizeClass = kk_filesize
 
   # download icon
-  # if set to typo3/gfx/fileicons/ typo3 standard icons appear
-  # you can set own images like:
-  # downloadIcon = typo3conf/ext/kk_downloader/pi1/images/download.gif
-  downloadIcon = typo3/gfx/fileicons/
+  # leave empty to use Icons of TYPO3 (IconFactory)
+  # If you set an IconPath, this icon will be used for all Downloads
+  # Example: downloadIcon = EXT:kk_downloader/Resources/Public/Icons/MissingDownload.gif
+  downloadIcon =
 
-  # if a download icon is missing (e.g. *.rar)
-  missingDownloadIcon = typo3conf/ext/kk_downloader/pi1/images/download.gif
+  # Use this Icon, if a file-extension could not be found
+  # Will only work, if downloadIcon is empty
+  missingDownloadIcon = EXT:kk_downloader/Resources/Public/Icons/MissingDownload.gif
 
   # limit of single items on one list-page
   results_at_a_time = 25
@@ -62,9 +63,6 @@ plugin.tx_kkdownloader_pi1 {
     previous_stdWrap.wrap = |
     next_stdWrap.wrap = |
   }
-
-  # distance around image
-  imageDistance = 5
 
   persistence {
     storagePid = 1
